# studentprognose

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Opleidingen.txt  README.md  main.py  pyproject.toml  requirements.txt
configuration/: configuration.json  ensemble_weights.xlsx  error_rates.xlsx
hooks/: install_pre-push.sh  pre-push  run_bash.py
notebooks/: checkpoint_difference.ipynb  compare_student_count.ipynb  data_exploration.ipynb  find_best_weight_distribution.ipynb  metric_test.ipynb  multiple_years_prediction_sarima_V0.ipynb  multiple_years_prediction_xgboost_V0.ipynb  multiple_years_prediction_xgboost_V1.ipynb  multiple_years_prediction_xgboost_V1_optimized.ipynb  multiple_years_prediction_xgboost_V2.ipynb  multiple_years_prediction_xgboost_V3.ipynb  output_test.ipynb  subset_data.py  update_totaal.ipynb  volume_prediction_RNN.ipynb  volume_prediction_RNN_all-programmes.ipynb  volume_prediction_RNN_all-programmes_optimized.ipynb  volume_prediction_ensemble.ipynb  volume_prediction_old.ipynb  volume_prediction_ratio.ipynb  volume_prediction_two-step.ipynb  volume_prediction_xgboost.ipynb  volume_prediction_xgboost_different_method.ipynb  volume_prediction_xgboost_optimization.ipynb
old_code/: applicant_prediction.py  old_load_data.py  old_main.py  paths.cfg  postprocess.py  predict_sarima.py  preprocess.py
scripts/: availabledata.py  bothdatasets.py  calculate_ensemble_weights.py  calculate_student_count.py  cumulative.py  dataoption.py  datatotal.py  helper.py  higher_years.py  individual.py  load_data.py  transform_data.py
(+38 files in other folders)
